--- a/Sample/RonSijm.VSTools.Sample.Lib1/RonSijm.VSTools.Sample.Lib1.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib1/RonSijm.VSTools.Sample.Lib1.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="../SharedConfig.props" />
 
-  <PropertyGroup>
-	  <TargetFramework>net8.0</TargetFramework>
-	  <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
 </Project>
