--- a/Sample/RonSijm.VSTools.Sample.Lib4/RonSijm.VSTools.Sample.Lib4.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib4/RonSijm.VSTools.Sample.Lib4.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="../SharedConfig.props" />
 
-  <PropertyGroup>
-	  <TargetFramework>net8.0</TargetFramework>
-	  <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib5\RonSijm.VSTools.Sample.Lib5.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib5\RonSijm.VSTools.Sample.Lib5.csproj" />
+	</ItemGroup>
 
 </Project>
