--- a/Sample/RonSijm.VSTools.Sample.Lib6/RonSijm.VSTools.Sample.Lib6.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib6/RonSijm.VSTools.Sample.Lib6.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="../SharedConfig.props" />
 
-  <PropertyGroup>
-	  <TargetFramework>net8.0</TargetFramework>
-	  <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib8\RonSijm.VSTools.Sample.Lib8.csproj" />
