--- a/Sample/RonSijm.VSTools.Sample.Lib9/RonSijm.VSTools.Sample.Lib9.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib9/RonSijm.VSTools.Sample.Lib9.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="../SharedConfig.props" />
 
-  <PropertyGroup>
-	  <TargetFramework>net8.0</TargetFramework>
+	<PropertyGroup>
 	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
