- Restructured project and added a function to create a cache mapping

--- a/Sample/RonSijm.VSTools.Sample.Lib1/RonSijm.VSTools.Sample.Lib1.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib1/RonSijm.VSTools.Sample.Lib1.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="../SharedConfig.props" />
-
-	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
-
+  <Import Project="..\SharedConfig.props" />
+  <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
+	  <ProjectReferenceId>ExistingReferenceId</ProjectReferenceId>
+  </PropertyGroup>
 </Project>
