--- a/Sample/RonSijm.VSTools.Sample.ConsoleApp/RonSijm.VSTools.Sample.ConsoleApp.csproj
+++ b/Sample/RonSijm.VSTools.Sample.ConsoleApp/RonSijm.VSTools.Sample.ConsoleApp.csproj
@@ -1,15 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="../SharedConfig.props" />
-
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib1\RonSijm.VSTools.Sample.Lib1.csproj" />
-		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib2\RonSijm.VSTools.Sample.Lib2.csproj" />
-		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib4\RonSijm.VSTools.Sample.Lib4.csproj" />
-	</ItemGroup>
-
+  <Import Project="..\SharedConfig.props" />
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib1\RonSijm.VSTools.Sample.Lib1.csproj" />
+    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib2\RonSijm.VSTools.Sample.Lib2.csproj" />
+    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib4\RonSijm.VSTools.Sample.Lib4.csproj" />
+  </ItemGroup>
 </Project>
