--- a/Sample/RonSijm.VSTools.Sample.Lib2/RonSijm.VSTools.Sample.Lib2.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib2/RonSijm.VSTools.Sample.Lib2.csproj
@@ -1,12 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="../SharedConfig.props" />
+  <Import Project="..\SharedConfig.props" />
 
-	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib3\RonSijm.VSTools.Sample.Lib3.csproj" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib3\RonSijm.VSTools.Sample.Lib3.csproj" />
+  </ItemGroup>
 </Project>
