--- a/Sample/RonSijm.VSTools.Sample.Lib3/RonSijm.VSTools.Sample.Lib3.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib3/RonSijm.VSTools.Sample.Lib3.csproj
@@ -1,8 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="../SharedConfig.props" />
-
-	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
-
+  <Import Project="..\SharedConfig.props" />
+  <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
 </Project>
