--- a/Sample/RonSijm.VSTools.Sample.Lib6/RonSijm.VSTools.Sample.Lib6.csproj
+++ b/Sample/RonSijm.VSTools.Sample.Lib6/RonSijm.VSTools.Sample.Lib6.csproj
@@ -1,13 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="../SharedConfig.props" />
-
-	<PropertyGroup>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib8\RonSijm.VSTools.Sample.Lib8.csproj" />
-		<ProjectReference Include="..\RonSijm.VSTools.Sample.Lib9\RonSijm.VSTools.Sample.Lib9.csproj" />
-	</ItemGroup>
-
+  <Import Project="..\SharedConfig.props" />
+  <PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib8\RonSijm.VSTools.Sample.Lib8.csproj" />
+    <ProjectReference Include="..\RonSijm.VSTools.Sample.Lib9\RonSijm.VSTools.Sample.Lib9.csproj" />
+  </ItemGroup>
 </Project>
