--- a/src/RonSijm.VSTools.Lib/RonSijm.VSTools.Lib.csproj
+++ b/src/RonSijm.VSTools.Lib/RonSijm.VSTools.Lib.csproj
@@ -1,13 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	  <PackageType>DotnetTool</PackageType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<PackageType>DotnetTool</PackageType>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Build" Version="17.8.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Build" Version="17.8.3" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+		<PackageReference Include="OneOf" Version="3.0.263" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Features\MismatchFinding\SolutionFixing\Interfaces\" />
+	</ItemGroup>
 
 </Project>
